# pyplsc

./: .coverage  .readthedocs.yml  README.md  coverage.xml  pyproject.toml
.github/workflows/: pypi.yml  tests.yml
docs/source/: BDA.rst  PLSC.rst  WPLSC.rst  WPPLSC.rst  api.rst  conf.py  examples.rst  index.rst  introduction.rst  requirements.txt
docs/source/notebooks/: BDA.ipynb  PLSC.ipynb  WPLSC.ipynb  background.ipynb
src/pyplsc/: __init__.py  utils.py
tests/: test_all.py
