
[build-system]
requires = ["setuptools>=61.0", "numpy", "tqdm", "joblib", "sklearn", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplsc"
version = "0.0.1"
description = "Python implementation of partial least squares correlation (PLSC)"
authors = [{ name="Isaac Kinley", email="isaac.kinley@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "--cov=pyplsc --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["pyplsc"]
omit = ["tests/*"]