
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplsc"
dependencies = ["numpy", "pandas", "tqdm", "joblib", "scikit-learn", "scipy"]
version = "0.0.11"
description = "Python implementation of partial least squares correlation (PLSC)"
authors = [{ name="Isaac Kinley", email="isaac.kinley@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "--cov=pyplsc --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["pyplsc"]
omit = ["tests/*"]

[tool.interrogate]
ignore-init-method = true
ignore-private = true
fail-under = 90

[tool.pydoclint]
style = "numpy"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = false